--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-REDDIT_CLIENT_ID= <CLIENT_ID>
-REDDIT_CLIENT_SECRET= <CLIENT_SECRET>
-REDDIT_USER_AGENT= <USER_AGENT>
-REDDIT_USERNAME = <USERNAME>
-REDDIT_PASSWORD = <PASSWORD>
-WEBHOOK = <WEBHOOK_URL>
+CLIENT_ID = <CLIENT_ID>
+CLIENT_SECRET = <CLIENT_SECRET>
+USER_AGENT = <USER_AGENT>
+<SUBREDDIT> = <WEBHOOK_URL>
