--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 CLIENT_ID = <CLIENT_ID>
 CLIENT_SECRET = <CLIENT_SECRET>
 USER_AGENT = <USER_AGENT>
-<SUBREDDIT> = <WEBHOOK_URL>
+SUBREDDIT = <WEBHOOK_URL>
